[project]
name = "reflex_github_page"
version = "1.0.0"
dependencies = [
    "reflex>=0.5.1",
    "pyyaml>=6.0.1",
    "ruff>=0.4.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["reflex_github_page"]
